force-app/main/default/objects/TDC_EC__EmailConfig__c/TDC_EC__EmailConfig__c.object-meta.xml
<CustomObject>
    <description>This object is used to store config records.</description>
    <label>Email Configuration</label>
    <nameField>
        <label>Object Api Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>