force-app/main/default/objects/TDC_EC__EmailConfig__c/fields/TDC_EC__Default_Email_Api__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Default_Email_Api__c</fullName>
    <inlineHelpText>The value of the email field entered here will be auto-selected on the “To Email” field on the Send Email component.</inlineHelpText>
    <label>Default Email Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>