force-app/main/default/objects/TDC_EC__EmailConfig__c/fields/TDC_EC__Email_Apis__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Email_Apis__c</fullName>
    <inlineHelpText>The value(s) of the email API(s) entered here will be reflected in the “To Email” picklist field on the Send Email component along with the default email field.</inlineHelpText>
    <label>Email Apis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>