force-app/main/default/objects/TDC_EC__EmailConfig__c/fields/TDC_EC__NameFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__NameFieldApiName__c</fullName>
    <label>Name Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>