force-app/main/default/objects/TDC_EC__EmailConfig__c/fields/TDC_EC__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Object_Label__c</fullName>
    <label>Object Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>