force-app/main/default/objects/TDC_EC__EmailConfig__c/listViews/TDC_EC__All.listView-meta.xml
<ListView>
    <fullName>TDC_EC__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>